--- a/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj.filters
+++ b/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="votecandidate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="addcandidate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="votecandidate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
