--- a/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj
+++ b/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj
@@ -140,12 +140,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="addcandidate.cpp" />
+    <ClCompile Include="Candidate.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="votecandidate.cpp" />
+    <ClCompile Include="Voter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="addcandidate.h" />
+    <ClInclude Include="Candidate.h" />
     <ClInclude Include="votecandidate.h" />
+    <ClInclude Include="Voter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
