--- a/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj.filters
+++ b/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="votecandidate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Candidate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Voter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="addcandidate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="votecandidate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Candidate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Voter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
