--- a/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj.filters
+++ b/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Voter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="addcandidate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
