--- a/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj
+++ b/SWE20004_Project/SWE20004_Project/SWE20004_Project.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="addcandidate.cpp" />
     <ClCompile Include="Candidate.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="votecandidate.cpp" />
